# esp32p4-hal-testing

./: .gitignore  Cargo.toml  README.md  REUSE.toml  TEST_OUTPUTS.md  build_all.sh  check_setup.sh  monitor.sh  run_tests.sh
.cargo/: config.toml
src/: lib.rs
